--- a/colourPickerGame.html
+++ b/colourPickerGame.html
@@ -12,7 +12,7 @@
             <br>
             Colour Game</h1>
         <div id = "stripe">
-            <button id = "reset">New Colors</button>
+            <button id = "reset">New Colours</button>
             <span id="message"> </span>
             <button class="mode">Easy</button>
             <button class = "mode selected">Hard</button>
