--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>ColourPickerGame</title>
-        <link rel = "stylesheet" type = "text/css" href= "colourPickerGame.css">
+        <link rel = "stylesheet" type = "text/css" href= "/colourPickerGame.css">
     </head>
     <body>
         <h1> 
@@ -26,6 +26,6 @@
             <div class = "square"></div>
         </div>
     
-        <script src="colourPickerGame.js"></script>
+        <script src="/colourPickerGame.js"></script>
     </body>
 </html>
